# hr_simulation_gz

./: 7000_ethernet.job  README.md  hr_simulation.humble.repos  ros2-humble-desktop-main.sh  ros2-install-deps.sh
hr_description/: CMakeLists.txt  package.xml
hr_description/config/ha006b/: default_kinematics.yaml  joint_limits.yaml
hr_description/config/hh020/: default_kinematics.yaml  joint_limits.yaml
hr_description/config/hh7/: default_kinematics.yaml  joint_limits.yaml  visual_parameters.yaml
hr_description/config/hs220_02/: default_kinematics.yaml
hr_description/config/hx400/: default_kinematics.yaml  joint_limits.yaml  physical_parameters.yaml  visual_parameters.yaml
hr_description/meshes/hh020/collision/: flange.stl
hr_description/meshes/hs165/visual/: Crg_HS165_3600.hrs  moter_3600.STL
hr_description/meshes/hx400/visual/: arm_pipe.stl  (+1 more)
hr_description/rviz/: view_robot.rviz
hr_description/urdf/: hr.ros2_control_hx400.xacro  hr.urdf.xacro  hr_macro.xacro  hr_macro_hx400.urdf
hr_description/urdf/inc/: hr_common.xacro  hr_transmissions.xacro
hr_moveit_config/: CMakeLists.txt  package.xml
hr_moveit_config/config/: kinematics.yaml
hr_moveit_config/launch/: hr_moveit.launch.py
hr_moveit_config/rviz/: view_robot.rviz
hr_moveit_config/srdf/: hr.srdf.xacro  hr_macro.srdf.xacro
hr_simulation/: CMakeLists.txt  package.xml
hr_simulation/config/: hr_controllers.yaml  hr_controllers_conveyor.yaml
hr_simulation/launch/: hr_sim_control.launch.py  hr_sim_moveit.launch.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
(+504 files in other folders)
